--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <h2>5. Your Control</h2>
     <p>You can delete any saved data within the app by removing affirmations individually or uninstalling the app.</p>
 
-    <h2>6. Contact</h2>
+    <h2>6. Policy Updates</h2>
+    <p>This privacy policy may be updated if ReflectDeck's features or data usage practices change.  We recommend checking this page periodically for any updates.</p>
+
+    <h2>7. Contact</h2>
     <p>If you have any privacy-related questions, you can reach out to the developer at: <a href="mailto:raffertyerin01@gmail.com">raffertyerin01@gmail.com</a></p>
   </body>
 </html>
